--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,15 @@
     <string name="app_name">Behance Projects - Muzei</string>
     <string name="source_name">Behance</string>
     <string name="source_description">Art projects from Behance</string>
-    <string name="title_activity_behance_setting">BehanceSettingActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="popular_photos">Popular Photos</string>
+    <string name="title_settings">Behance Settings</string>
+    <string name="done">Done</string>
+    <string name="add">Add</string>
+    <string name="user_name">Behance creative username</string>
+    <string name="no_user">No creatives in here.\nAdd one now!</string>
+    <string name="config_every">Refresh every %1$s.</string>
+    <string name="config_connection_wifi">Only on WiFi</string>
+    <string name="config_connection_all">On all available connections</string>
+    <string name="config_popular_on">Current popular creatives</string>
+    <string name="config_popular_off">Only specified creatives</string>
 
 </resources>
